--- a/hierarchical-evaluation.ipynb
+++ b/hierarchical-evaluation.ipynb
@@ -21,7 +21,7 @@
     "import torch\n",
     "from anytree.importer import JsonImporter\n",
     "from preprocessing.preprocessing import load_ground_truth_mask_xyn, convert_polygon_to_mask, calculate_binary_mask_iou\n",
-    "from utils.metrics import calculate_hierarchical_precision_recall, calculate_weighted_f1_score\n",
+    "from utils.metrics import calculate_hierarchical_precision_recall, calculate_weighted_f1_score, hierarchical_similarity\n",
     "torch.cuda.empty_cache()\n",
     "\n",
     "# Function to divide the data into chunks of size n\n",
@@ -53,7 +53,9 @@
     "    elif node.rank == 'class':\n",
     "        class_names.append(node.name)\n",
     "    elif node.rank == 'binary':\n",
-    "        binary_names.append(node.name)"
+    "        binary_names.append(node.name)\n",
+    "\n",
+    "taxonomies = [species_names, genus_names, class_names, binary_names]"
    ]
   },
   {
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,39 +206,26 @@
     "                    Y.append(GT[idx][0])\n",
     "                    Yhat.append(None)\n",
     "\n",
-    "    # After processing each batch, clear unusPolitisk likheited memory from CUDA\n",
+    "    # After processing each batch, clear unused memory from CUDA\n",
     "    torch.cuda.empty_cache()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Calculate weighted precision, recall, and F1\n",
-    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, root, species_names)\n",
-    "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
+    "# Calculate scores without reclassification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9588657803141181"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "precision"
+    "# Calculate weighted precision, recall, and F1\n",
+    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, confidences, taxonomies, prob_tree, threshold=0)\n",
+    "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
    ]
   },
   {
@@ -247,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8972809667673716"
+       "0.9625112107623318"
       ]
      },
      "execution_count": 6,
@@ -256,7 +245,7 @@
     }
    ],
    "source": [
-    "recall"
+    "precision"
    ]
   },
   {
@@ -267,10 +256,30 @@
     {
      "data": {
       "text/plain": [
-       "0.9270517169110761"
+       "0.8988274706867672"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9295799047206583"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,89 +297,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from anytree.search import find\n",
-    "from anytree.walker import Walker\n",
-    "\n",
-    "def hierarchical_similarity(node1, node2):\n",
-    "    walker = Walker()\n",
-    "    # Assuming node1 and node2 are already the correct nodes from the tree\n",
-    "    upwards, _, down = walker.walk(node1, node2)\n",
-    "    distance = len(upwards) + len(down)\n",
-    "\n",
-    "    return 1 / (1 + distance)\n",
-    "\n",
-    "def calculate_hierarchical_precision_recall(Y, Yhat, tree, confidences, threshold=0.8):\n",
-    "    weighted_true_positives = 0\n",
-    "    weighted_false_positives = 0\n",
-    "    weighted_false_negatives = 0\n",
-    "    taxonomies = [species_names, genus_names, class_names, binary_names]\n",
-    "    \n",
-    "    for true_label, predicted_label, conf in zip(Y, Yhat, confidences):\n",
-    "        if predicted_label is None:  # Handle negative prediction as complete miss\n",
-    "            weighted_false_negatives += 1\n",
-    "            continue\n",
-    "        if true_label is None:  # Handle missing ground truth as complete miss\n",
-    "            weighted_false_positives += 1\n",
-    "            continue\n",
-    "\n",
-    "        current_taxonomy = 0\n",
-    "        node = find(tree.root, lambda node: node.name == taxonomies[current_taxonomy][predicted_label])\n",
-    "        while conf < threshold and current_taxonomy < len(taxonomies) - 1:\n",
-    "            # Move up the taxonomy if the confidence is below the threshold\n",
-    "            if node.parent is not None:\n",
-    "                node = node.parent\n",
-    "                current_taxonomy += 1\n",
-    "                # Attempt to find the new predicted_label index in the parent taxonomy\n",
-    "                try:\n",
-    "                    predicted_label = taxonomies[current_taxonomy].index(node.name)\n",
-    "                except ValueError:\n",
-    "                    # If the node's name is not in the taxonomy, break from the loop\n",
-    "                    break\n",
-    "                conf += tree.sum_siblings_probabilities(node.name)\n",
-    "            else:\n",
-    "                break  # If there's no parent, we're at the root and cannot go up further\n",
-    "\n",
-    "        # At this point, node represents the current predicted label node\n",
-    "        node1 = node\n",
-    "        node2 = find(tree.root, lambda node: node.name == taxonomies[0][true_label])\n",
-    "        similarity_weight = hierarchical_similarity(node1, node2)\n",
-    "\n",
-    "        if true_label == predicted_label:\n",
-    "            weighted_true_positives += similarity_weight\n",
-    "        else:\n",
-    "            weighted_false_positives += (1 - similarity_weight)  # Penalize based on dissimilarity\n",
-    "\n",
-    "    precision = weighted_true_positives / (weighted_true_positives + weighted_false_positives) if (weighted_true_positives + weighted_false_positives) > 0 else 0\n",
-    "    recall = weighted_true_positives / (weighted_true_positives + weighted_false_negatives) if (weighted_true_positives + weighted_false_negatives) > 0 else 0\n",
-    "    \n",
-    "    return precision, recall\n",
-    "\n",
-    "def calculate_weighted_f1_score(precision, recall):\n",
-    "    if precision + recall == 0:\n",
-    "        return 0\n",
-    "    return 2 * (precision * recall) / (precision + recall)\n",
-    "\n",
     "# Calculate weighted precision, recall, and F1\n",
-    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, prob_tree, confidences, threshold=0.2)\n",
+    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, confidences, taxonomies, prob_tree, threshold=0.30)\n",
     "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scores with reclassifiation using uniform tree"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9590961757352848"
+       "0.9602612955906369"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,16 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8988274706867672"
+       "0.8975576662143826"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,16 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9279843027366996"
+       "0.927851319365302"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,28 +382,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 1321,\n",
-       " 1: 1399,\n",
-       " 2: 2324,\n",
-       " 3: 1210,\n",
-       " 4: 3098,\n",
-       " 5: 1376,\n",
-       " 6: 1519,\n",
-       " 7: 1081,\n",
-       " 8: 1292,\n",
-       " 9: 2113,\n",
-       " 10: 1202,\n",
-       " 11: 3314,\n",
-       " 12: 4837}"
+       "{'asterias rubens': 1321,\n",
+       " 'asteroidea': 1399,\n",
+       " 'fucus vesiculosus': 2324,\n",
+       " 'henrica': 1210,\n",
+       " 'mytilus edulis': 3098,\n",
+       " 'myxine glurinosa': 1376,\n",
+       " 'pipe': 1519,\n",
+       " 'rock': 1081,\n",
+       " 'saccharina latissima': 1292,\n",
+       " 'tree': 2113,\n",
+       " 'ulva intestinalis': 1202,\n",
+       " 'urospora': 3314,\n",
+       " 'zostera marina': 4837}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +431,144 @@
     "        class_index_counts[class_index] = 1\n",
     "\n",
     "sorted_class_index_counts = dict(sorted(class_index_counts.items()))\n",
-    "sorted_class_index_counts"
+    "sorted_class_index_counts\n",
+    "renamed_dict = {species_names[key]: value for key, value in sorted_class_index_counts.items()}\n",
+    "renamed_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ontology_path = 'data/ontology.json'  # Update this path as necessary\n",
+    "new_prob_tree = ProbabilityTree(ontology_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object (Rank: root, Probability: 1.0000000000000002)\n",
+      "├── marine life (Rank: binary, Probability: 0.7692307692307694)\n",
+      "│   ├── Asteroidea (Rank: class, Probability: 0.23076923076923078)\n",
+      "│   │   ├── asterias (Rank: genus, Probability: 0.1304330214282821)\n",
+      "│   │   │   ├── asterias rubens (Rank: species, Probability: 0.053509944505205166)\n",
+      "│   │   │   └── asteroidea (Rank: species, Probability: 0.0)\n",
+      "│   │   │       └── asterias (Rank: species, Probability: 0.0)\n",
+      "│   │   └── Henrica (Rank: genus, Probability: 0.0490136509093855)\n",
+      "│   │       └── henrica (Rank: species, Probability: 0.0490136509093855)\n",
+      "│   ├── phaeophyceae (Rank: class, Probability: 0.15384615384615385)\n",
+      "│   │   ├── fucus (Rank: genus, Probability: 0.09413861546562968)\n",
+      "│   │   │   └── fucus vesiculosus (Rank: species, Probability: 0.09413861546562968)\n",
+      "│   │   └── saccharina (Rank: genus, Probability: 0.052335237169360393)\n",
+      "│   │       └── saccharina latissima (Rank: species, Probability: 0.052335237169360393)\n",
+      "│   ├── bivalia (Rank: class, Probability: 0.07692307692307693)\n",
+      "│   │   └── mya (Rank: genus, Probability: 0.12549114918783166)\n",
+      "│   │       └── mytilus edulis (Rank: species, Probability: 0.12549114918783166)\n",
+      "│   ├── myxini (Rank: class, Probability: 0.07692307692307693)\n",
+      "│   │   └── myxine (Rank: genus, Probability: 0.05573783772835905)\n",
+      "│   │       └── myxine glurinosa (Rank: species, Probability: 0.05573783772835905)\n",
+      "│   ├── chlorophyta (Rank: class, Probability: 0.15384615384615385)\n",
+      "│   │   ├── ulva (Rank: genus, Probability: 0.048689593713290395)\n",
+      "│   │   │   └── ulva intestinalis (Rank: species, Probability: 0.048689593713290395)\n",
+      "│   │   └── Urospora (Rank: genus, Probability: 0.13424069348239964)\n",
+      "│   │       └── urospora (Rank: species, Probability: 0.13424069348239964)\n",
+      "│   └── monocots (Rank: class, Probability: 0.07692307692307693)\n",
+      "│       └── zostera (Rank: genus, Probability: 0.19593308218900635)\n",
+      "│           └── zostera marina (Rank: species, Probability: 0.19593308218900635)\n",
+      "└── inanimate (Rank: binary, Probability: 0.23076923076923078)\n",
+      "    ├── artificial (Rank: class, Probability: 0.07692307692307693)\n",
+      "    │   └── cylindrical (Rank: genus, Probability: 0.06153036010855916)\n",
+      "    │       └── pipe (Rank: species, Probability: 0.06153036010855916)\n",
+      "    └── natural (Rank: class, Probability: 0.15384615384615385)\n",
+      "        ├── solid (Rank: genus, Probability: 0.04378822862235184)\n",
+      "        │   └── rock (Rank: species, Probability: 0.04378822862235184)\n",
+      "        └── arboral (Rank: genus, Probability: 0.08559160691862114)\n",
+      "            └── tree (Rank: species, Probability: 0.08559160691862114)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_prob_tree.update_probabilities_with_instance_counts(renamed_dict)\n",
+    "new_prob_tree.print_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate weighted precision, recall, and F1\n",
+    "precision, recall = calculate_hierarchical_precision_recall(Y, Yhat, confidences, taxonomies, new_prob_tree, threshold=0.30)\n",
+    "weighted_f1_score = calculate_weighted_f1_score(precision, recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9602612955906369"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8975576662143826"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.927851319365302"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_f1_score"
    ]
   }
  ],
